--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
 # Compiled class file
 *.class
-
+*.balx
 # Log file
 *.log
+
+#conf file
+ballerina.conf
+Config.toml
+
+#lock file
+Ballerina.lock
 
 # BlueJ files
 *.ctxt
@@ -12,8 +19,8 @@
 
 # Package Files #
 *.jar
+!gradle-wrapper/*.jar
 *.war
-*.nar
 *.ear
 *.zip
 *.tar.gz
@@ -21,4 +28,43 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-replay_pid*
+
+# Ignore everything in this directory
+target
+.classpath
+.settings
+.project
+*.iml
+*.iws
+*.ipr
+.idea
+.m2
+.vscode/
+*.ballerina/
+*.env
+
+# Ignore ballerina files
+accessToken.bal
+temp.bal.ballerina/
+target/
+.DS_Store
+
+#Ignore emp-wrapper java classes
+**/target
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Build files
+**/build/*
+
+# Json files created inside resources folder. Refer exception below.
+**/resources/*.json
+
+# Allow files in the bulk test folder
+!**/tests/resources/*
+
+# Ignore Gradle build output directory
+build
+
+.DS_Store
